microk8s/seafile/elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seafile-elastic
  name: seafile-elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-elastic
  template:
    metadata:
      labels:
        app: seafile-elastic
    spec:
      nodeSelector:
        host_seafile: "true"
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms1g -Xmx1g
        - name: discovery.types
          value: single-node
        - name: bootstrap.memory_lock
          value: "true"
        image: seafileltd/elasticsearch-with-ik:5.6.16
        name: seafile-elastic
        resources:
          limits:
            memory: "2147483648"
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: seafile-elastic-files
      restartPolicy: Always
      volumes:
      - name: seafile-elastic-files
        hostPath:
          path: /seafile-elastic-files
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seafile-elastic
  name: elasticsearch
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  - name: "9300"
    port: 9300
    targetPort: 9300
  selector:
    app: seafile-elastic
  type: ClusterIP
